long overdue update

--- a/compgeom.bib
+++ b/compgeom.bib
@@ -2,12 +2,83 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2023-03-15 18:50:38 -0500 
+%% Created for Jeff Erickson at 2024-05-29 18:41:24 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{ta-chapi-82,
+	author = {Toussaint, Gottfried T. and Avis, David},
+	comments = {The three-penny algorithm computes the convex hull of weakly externally visible and/or edge-visible polygons.},
+	date-added = {2024-05-29 18:37:44 -0500},
+	date-modified = {2024-05-29 18:39:08 -0500},
+	doi = {10.1016/0031-3203(82)90057-7},
+	journal = {Pattern Recogn.},
+	keywords = {polygons, triangulation, convex hull},
+	number = {1},
+	pages = {23--29},
+	title = {On a convex hull algorithm for polygons and its application to triangulation problems},
+	volume = {15},
+	year = {1982},
+	bdsk-url-1 = {https://doi.org/10.1016/0031-3203(82)90057-7}}
+
+@article{a-readc-78,
+	author = {Anderson, Kenneth R.},
+	comments = {Graham's scan but using slopes instead of angles},
+	date-added = {2024-05-29 18:34:23 -0500},
+	date-modified = {2024-05-29 18:40:26 -0500},
+	doi = {10.1016/0020-0190(78)90041-8},
+	journal = {Inform. Process. Lett.},
+	number = {1},
+	pages = {53--55},
+	title = {A reevaluation of an efficient algorithm for determining the convex hull of a finite planar set},
+	volume = {7},
+	year = {1978},
+	bdsk-url-1 = {https://doi.org/10.1016/0020-0190(78)90041-8}}
+
+@article{gs-ngcha-87,
+	author = {Gries, David and Stojmenovi{\'c}, Ivan},
+	comments = {Variant of Graham's scan that pivots around an extreme point instead of an interior point; fixes bugs in several published variants},
+	date-added = {2024-05-29 18:29:40 -0500},
+	date-modified = {2024-05-29 18:40:50 -0500},
+	doi = {10.1016/0020-0190(87)90207-9},
+	journal = {Inform. Process. Lett.},
+	pages = {323--327},
+	title = {A note on {Graham}'s convex hull algorithm},
+	volume = {25},
+	year = {1987},
+	bdsk-url-1 = {https://doi.org/10.1016/0020-0190(87)90207-9}}
+
+@article{g-eadch-72,
+	annote = {$O(n \log n)$ time, polar sorting},
+	author = {Graham, Ronald L.},
+	date-added = {2024-05-29 18:28:31 -0500},
+	date-modified = {2024-05-29 18:40:18 -0500},
+	doi = {10.1016/0020-0190(72)90045-2},
+	journal = {Inform. Proc. Lett.},
+	keywords = {Graham scan, three-penny algorithm},
+	number = {4},
+	pages = {132--133},
+	title = {An efficient algorithm for determining the convex hull of a finite planar set},
+	volume = {1},
+	year = {1972},
+	bdsk-url-1 = {https://doi.org/10.1016/0020-0190(72)90045-2}}
+
+@article{s-mcrm-72,
+	author = {Sklansky, Jack},
+	date-added = {2024-05-29 18:26:43 -0500},
+	date-modified = {2024-05-29 18:40:59 -0500},
+	doi = {10.1109/T-C.1972.223507},
+	journal = {IEEE Trans. Comput.},
+	keywords = {three-penny algorithm (see also Graham, Avis-Toussaint)},
+	number = {12},
+	pages = {1355--1364},
+	title = {Measuring concavity on rectangular mosaic},
+	volume = {C-21},
+	year = {1972},
+	bdsk-url-1 = {https://doi.org/10.1109/T-C.1972.223507}}
 
 @article{kkk-tgrfw-83,
 	author = {Kahn, Jeff and Klawe, Maria M. and Kleitman, Daniel},
@@ -294,9 +365,9 @@
 @article{b-vdch-79,
 	author = {Brown, Kevin Q.},
 	date-added = {2019-03-21 09:34:19 +0100},
-	date-modified = {2019-03-21 09:34:55 +0100},
+	date-modified = {2024-05-29 18:28:27 -0500},
 	doi = {10.1016/0020-0190(79)90074-7},
-	journal = {Inform. Process. Lett.},
+	journal = {Inform. Proc. Lett.},
 	number = {5},
 	pages = {223--228},
 	title = {Voronoi diagrams from convex hulls},
