--- a/data-structures.bib
+++ b/data-structures.bib
@@ -2,12 +2,144 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2023-03-08 19:55:46 -0600 
+%% Created for Jeff Erickson at 2024-03-15 14:01:03 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@misc{i-iubph-11,
+	arxiv = {1110.4428},
+	author = {Iacono, John},
+	date-added = {2024-03-15 13:59:40 -0500},
+	date-modified = {2024-03-15 14:01:03 -0500},
+	howpublished = {Preprint},
+	month = {October},
+	note = {Updated version of \cite{i-iubph-00}},
+	title = {Improved Upper Bounds for Pairing Heaps},
+	year = {2011}}
+
+@inproceedings{c-qhsaf-13,
+	author = {Chan, Timothy M.},
+	booktitle = {Space-Efficient Data Structures, Streams, and Algorithms: Papers in Honor of J. Ian Munro on the Occasion of His 66th Birthday},
+	date-added = {2024-03-15 13:37:15 -0500},
+	date-modified = {2024-03-15 13:38:01 -0500},
+	doi = {10.1007/978-3-642-40273-9_3},
+	editor = {Brodnik, Andrej and L{\'{o}}pez{-}Ortiz, Alejandro and Raman, Venkatesh and Viola, Alfredo},
+	pages = {27--32},
+	publisher = {Springer},
+	series = {Lecture Notes Comput. Sci.},
+	title = {Quake Heaps: {A} Simple Alternative to {Fibonacci} Heaps},
+	volume = {8066},
+	year = {2013},
+	bdsk-url-1 = {https://doi.org/10.1007/978-3-642-40273-9%5C_3}}
+
+@inproceedings{p-tfaph-05,
+	author = {Pettie, Seth},
+	booktitle = {Proc. 46th Ann. {IEEE} Symp. Found. Comput. Sci.},
+	date-added = {2024-03-15 13:32:05 -0500},
+	date-modified = {2024-03-15 13:32:42 -0500},
+	doi = {10.1109/SFCS.2005.75},
+	pages = {174--183},
+	title = {Towards a Final Analysis of Pairing Heaps},
+	year = {2005},
+	bdsk-url-1 = {https://doi.org/10.1109/SFCS.2005.75}}
+
+@inproceedings{i-iubph-00,
+	author = {Iacono*, John},
+	booktitle = {Proc. 7th Scand Workshop Algorithm Theory},
+	date-added = {2024-03-15 13:29:44 -0500},
+	date-modified = {2024-03-15 13:30:28 -0500},
+	doi = {10.1007/3-540-44985-X\_5},
+	number = {1851},
+	pages = {32--45},
+	publisher = {Springer},
+	series = {Lecture Notes in Computer Science},
+	title = {Improved Upper Bounds for Pairing Heaps},
+	year = {2000},
+	bdsk-url-1 = {https://doi.org/10.1007/3-540-44985-X%5C_5}}
+
+@inproceedings{st-ntaph-23,
+	author = {Sinnamon*, Corwin and Tarjan, Robert E.},
+	booktitle = {Proc. 34th Ann. ACM-SIAM Symp. Discrete Algorithms},
+	date-added = {2024-03-15 13:24:13 -0500},
+	date-modified = {2024-03-15 13:30:55 -0500},
+	doi = {10.1137/1.9781611977554.CH23},
+	pages = {535--548},
+	title = {A Nearly-Tight Analysis of Multipass Pairing Heaps},
+	year = {2023},
+	bdsk-url-1 = {https://doi.org/10.1137/1.9781611977554.CH23}}
+
+@article{fsst-phnfs-86,
+	author = {Fredman, Michael L. and Sedgewick, Robert and Sleator, Daniel Dominic and Tarjan, Robert Endre},
+	date-added = {2024-03-15 13:23:01 -0500},
+	date-modified = {2024-03-15 13:23:23 -0500},
+	doi = {10.1007/BF01840439},
+	journal = {Algorithmica},
+	number = {1},
+	pages = {111--129},
+	title = {The Pairing Heap: {A} New Form of Self-Adjusting Heap},
+	volume = {1},
+	year = {1986},
+	bdsk-url-1 = {https://doi.org/10.1007/BF01840439}}
+
+@article{ft-fhuin-87,
+	author = {Fredman, Michael L. and Tarjan, Robert Endre},
+	date-added = {2024-03-15 13:19:24 -0500},
+	date-modified = {2024-03-15 13:19:43 -0500},
+	doi = {10.1145/28869.28874},
+	journal = {J. {ACM}},
+	number = {3},
+	pages = {596--615},
+	title = {Fibonacci heaps and their uses in improved network optimization algorithms},
+	volume = {34},
+	year = {1987},
+	bdsk-url-1 = {https://doi.org/10.1145/28869.28874}}
+
+@article{v-dsmpq-78,
+	abstract = {A data structure is described which can be used for representing a collection of priority queues. The primitive operations are insertion, deletion, union, update, and search for an item of earliest priority.},
+	author = {Vuillemin, Jean},
+	date-added = {2024-03-15 13:16:18 -0500},
+	date-modified = {2024-03-15 13:17:14 -0500},
+	doi = {10.1145/359460.359478},
+	journal = {Commun. ACM},
+	keywords = {binomial heaps},
+	number = {4},
+	pages = {309--315},
+	title = {A data structure for manipulating priority queues},
+	volume = {21},
+	year = {1978},
+	bdsk-url-1 = {https://doi.org/10.1145/359460.359478}}
+
+@inproceedings{o-atcds-05,
+	author = {Okasaki, Chris},
+	booktitle = {Proc. 36th {SIGCSE} Tech. Symp. Comput. Sci. Education},
+	date-added = {2024-03-15 13:12:41 -0500},
+	date-modified = {2024-03-15 13:13:21 -0500},
+	doi = {10.1145/1047344.1047407},
+	pages = {162--165},
+	title = {Alternatives to two classic data structures},
+	year = {2005},
+	bdsk-url-1 = {https://doi.org/10.1145/1047344.1047407}}
+
+@book{c-llpqb-80,
+	author = {Crane*, Clark Allan},
+	date-added = {2024-03-15 13:01:15 -0500},
+	date-modified = {2024-03-15 13:07:09 -0500},
+	publisher = {Garland Pub.},
+	series = {Outstanding Dissertations in the Computer Sciences},
+	title = {Linear Lists and Priority Queues as Balanced Binary Trees},
+	year = {1980}}
+
+@phdthesis{c-llpqb-72,
+	author = {Crane*, Clark Allan},
+	date-added = {2024-03-15 12:57:50 -0500},
+	date-modified = {2024-03-15 13:07:05 -0500},
+	note = {Tech. Rep. STAN-CS-72-259},
+	school = {Stanford University},
+	title = {Linear Lists and Priority Queues as Balanced Binary Trees},
+	year = {1972}}
 
 @inproceedings{gssd-chfsh-08,
 	abstract = {We present a route planning technique solely based on the concept of node contraction. The nodes are first ordered by `importance'. A hierarchy is then generated by iteratively contracting the least important node. Contracting a node v means replacing shortest paths going through v by shortcuts. We obtain a hierarchical query algorithm using bidirectional shortest-path search. The forward search uses only edges leading to more important nodes and the backward search uses only edges coming from more important nodes. For fastest routes in road networks, the graph remains very sparse throughout the contraction process using rather simple heuristics for ordering the nodes. We have five times lower query times than the best previous hierarchical Dijkstra-based speedup techniques and a negative space overhead, i.e., the data structure for distance computation needs less space than the input graph. CHs can be combined with many other route planning techniques, leading to improved performance for many-to-many routing, transit-node routing, goal-directed routing or mobile and dynamic scenarios.},
@@ -21,7 +153,8 @@
 	publisher = {Springer},
 	series = {Lecture Notes Comput. Sci.},
 	title = {Contraction Hierarchies: {Faster} and Simpler Hierarchical Routing in Road Networks},
-	year = {2008}}
+	year = {2008},
+	bdsk-url-1 = {https://doi.org/10.1007/978-3-540-68552-4_24}}
 
 @phdthesis{w-dadsd-06,
 	author = {Werneck, Renato},
@@ -293,8 +426,8 @@
 @article{b-mbstu-75,
 	author = {Bentley, Jon L.},
 	date-added = {2011-01-22 15:05:19 -0600},
-	date-modified = {2011-01-22 15:06:06 -0600},
-	journal = {Communications of the ACM},
+	date-modified = {2024-03-15 13:17:04 -0500},
+	journal = {Commun. ACM},
 	keywords = {kd-tree},
 	pages = {509--517},
 	title = {Multidimensional binary search trees used for associative searching},
