--- a/misc.bib
+++ b/misc.bib
@@ -2,34 +2,43 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2021-03-20 09:29:28 -0500 
+%% Created for Jeff Erickson at 2023-11-05 12:43:06 -0600 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
 
+@misc{ncg-jpinws-23,
+	author = {Neuron, Jimmy and {Tee, IV}, Chet G. P. and Grahd, Ada},
+	date-added = {2023-11-05 12:32:51 -0600},
+	date-modified = {2023-11-05 12:43:04 -0600},
+	howpublished = {Poster, 40th International Conference on Machine Learning},
+	month = {July},
+	title = {You Can Just Put Up a Poster at {ICML} and Nobody Will Stop You},
+	year = {2023}}
+
 @article{b-ncapd-32,
 	author = {Bouguer, Pierre},
 	date-added = {2021-03-20 09:29:09 -0500},
 	date-modified = {2021-03-20 09:29:09 -0500},
-	journal = {Mémoires de mathématique et de physique tirés des registres de l’Académie royale des sciences},
+	journal = {M{\'e}moires de math{\'e}matique et de physique tir{\'e}s des registres de l'Acad{\'e}mie royale des sciences},
 	pages = {1--14},
 	title = {Sur de nouvelles courbes ausquelle on peut donner le nom de linges de poursuite},
 	url = {https://gallica.bnf.fr/ark:/12148/bpt6k35294},
 	year = {1732},
-	Bdsk-Url-1 = {https://gallica.bnf.fr/ark:/12148/bpt6k35294#}}
+	bdsk-url-1 = {https://gallica.bnf.fr/ark:/12148/bpt6k35294#}}
 
 @article{m-cp-32,
 	author = {de Maupertuis, Pierre},
 	date-added = {2021-03-20 09:29:09 -0500},
 	date-modified = {2021-03-20 09:29:09 -0500},
-	journal = {Mémoires de mathématique et de physique tirés des registres de l’Académie royale des sciences},
+	journal = {M{\'e}moires de math{\'e}matique et de physique tir{\'e}s des registres de l'Acad{\'e}mie royale des sciences},
 	pages = {15--17},
 	title = {Sure les Courbes de poursuite},
 	url = {https://gallica.bnf.fr/ark:/12148/bpt6k35294},
 	year = {1732},
-	Bdsk-Url-1 = {https://gallica.bnf.fr/ark:/12148/bpt6k35294#}}
+	bdsk-url-1 = {https://gallica.bnf.fr/ark:/12148/bpt6k35294#}}
 
 @article{h-psp2-20,
 	author = {Hathaway, Arthur S.},
@@ -42,7 +51,7 @@
 	title = {Problems and Solutions: Problem 2801},
 	volume = {27},
 	year = {1920},
-	Bdsk-Url-1 = {https://doi.org/10.2307/2973244}}
+	bdsk-url-1 = {https://doi.org/10.2307/2973244}}
 
 @book{i-dg-65,
 	author = {Isaacs, Rufus},
@@ -66,7 +75,7 @@
 	title = {Pursuit-evasion in a graph},
 	volume = {642},
 	year = {1978},
-	Bdsk-Url-1 = {https://doi.org/10.1007/BFb0070400}}
+	bdsk-url-1 = {https://doi.org/10.1007/BFb0070400}}
 
 @book{gkp-cm-94,
 	author = {Graham, Ronald L. and Knuth, Donald E. and Patashnik, Oren},
@@ -78,7 +87,7 @@
 	year = {1994}}
 
 @article{z-rlgfn-70,
-	author = {Zaremba, Stanisław K.},
+	author = {Zaremba, Stanis{\l}aw K.},
 	date-added = {2016-12-04 15:14:01 +0000},
 	date-modified = {2016-12-04 15:24:42 +0000},
 	journal = {Fibonacci Quarterly},
@@ -88,11 +97,11 @@
 	url = {http://www.fq.math.ca/8-2.html},
 	volume = {8},
 	year = {1970},
-	Bdsk-Url-1 = {http://www.fq.math.ca/8-2.html}}
+	bdsk-url-1 = {http://www.fq.math.ca/8-2.html}}
 
 @article{z-glpdn-66,
 	abstract = {Methods based on Diophantine approximations lead to a simple and easy construction of rational vectors the multiple of which, reduced modulo 1, form finite sequences of points with certain properties of equipartition over the unit square. Given a function of bounded variation over this square, it is suggested that computing the average of its values at the points of such a sequence can be a practical method of numerical integration. Precise bounds for the error ore obtained. In the general case, these are of the order of the product of the reciprocal and of the logarithm of the number of points; in the case of a function satisfying stated conditions of regularity and periodicity, they are of the order of the logarithm of the number of points divided by an appropriately high power of this number. A slight sharpening of some well-known results on equipartiton is obtained incidentally.},
-	author = {Zaremba, Stanisław K.},
+	author = {Zaremba, Stanis{\l}aw K.},
 	date-added = {2016-12-04 14:55:12 +0000},
 	date-modified = {2016-12-04 15:01:09 +0000},
 	doi = {10.1007/BF02415091},
@@ -102,7 +111,7 @@
 	title = {Good lattice points, discrepancy, and numerical integration},
 	volume = {73},
 	year = {1966},
-	Bdsk-Url-1 = {http://dx.doi.org/10.1007/BF02415091}}
+	bdsk-url-1 = {http://dx.doi.org/10.1007/BF02415091}}
 
 @inproceedings{clr-antor-82,
 	author = {Chor, Benny and Leiserson, Charles E. and Rivest, Ronald L.},
@@ -113,7 +122,7 @@
 	pages = {92--99},
 	title = {An application of number theory to the organization of raster-graphics memory (extended abstract)},
 	year = {1982},
-	Bdsk-Url-1 = {http://dx.doi.org/10.1109/SFCS.1982.10}}
+	bdsk-url-1 = {http://dx.doi.org/10.1109/SFCS.1982.10}}
 
 @article{clrs-antor-86,
 	author = {Chor, Benny and Leiserson, Charles E. and Rivest, Ronald L. and Shearer, James B.},
@@ -126,7 +135,7 @@
 	title = {An Application of Number Theory to the Organization of Raster-graphics Memory},
 	volume = {33},
 	year = {1986},
-	Bdsk-Url-1 = {http://dx.doi.org/10.1145/4904.4800}}
+	bdsk-url-1 = {http://dx.doi.org/10.1145/4904.4800}}
 
 @article{fs-panvl-86,
 	author = {Fiat, Amos and Shamir, Adi},
@@ -139,7 +148,7 @@
 	title = {Polymorphic arrays: {A} novel {VLSI} layout for systolic computers},
 	volume = {33},
 	year = {1986},
-	Bdsk-Url-1 = {http://dx.doi.org/10.1016/0022-0000(86)90042-5}}
+	bdsk-url-1 = {http://dx.doi.org/10.1016/0022-0000(86)90042-5}}
 
 @article{fs-fb-89,
 	author = {Fiat, Amos and Shamir, Adi},
@@ -152,4 +161,4 @@
 	title = {How to find a battleship},
 	volume = {19},
 	year = {1989},
-	Bdsk-Url-1 = {http://dx.doi.org/10.1002/net.3230190306}}
+	bdsk-url-1 = {http://dx.doi.org/10.1002/net.3230190306}}
