--- a/teaching.bib
+++ b/teaching.bib
@@ -2,12 +2,68 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2023-04-26 15:30:28 -0500 
+%% Created for Jeff Erickson at 2023-11-01 12:46:17 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{exrdg-asetcs-23,
+	author = {Erickson, Jeff and Xia, Jason and Robson, Eliot Wong and Do, Tue and Glickman, Aidan and Jia, Zhuofan and Jin, Eric and Lee, Jiwon and Lin, Patrick and Pan, Steven and Ruggerio, Samuel and Sakurayama, Tomoko and Yin, Andrew and Gertner, Yael and Solomon, Brad},
+	booktitle = {Proc. 2023 ASEE Annual Conference and Exposition},
+	date-added = {2023-05-01 14:47:13 -0500},
+	date-modified = {2023-05-01 14:49:57 -0500},
+	title = {Auto-graded scaffolding exercises for theoretical computer science},
+	year = {2023, to appear}}
+
+@misc{h-cs374-f22,
+	author = {Har-Peled, Sariel and others},
+	date-added = {2023-04-30 10:53:44 -0500},
+	date-modified = {2023-04-30 11:02:56 -0500},
+	howpublished = {University of Illinois Urbana-Champaign},
+	month = {Fall},
+	title = {{CS/ECE} 374: Algorithms \& {Models} of {Computation}},
+	url = {https://courses.engr.illinois.edu/cs374/fa2022/a/},
+	year = {2022},
+	bdsk-url-1 = {https://courses.engr.illinois.edu/cs374al1/sp2023/}}
+
+@misc{c-cs374-s23,
+	author = {Chekuri, Chandra and others},
+	date-added = {2023-04-30 10:50:53 -0500},
+	date-modified = {2023-04-30 11:02:54 -0500},
+	howpublished = {University of Illinois Urbana-Champaign},
+	month = {Spring},
+	title = {{CS/ECE} 374: Algorithms \& {Models} of {Computation}},
+	url = {https://courses.engr.illinois.edu/cs374al1/sp2023/},
+	year = {2023},
+	bdsk-url-1 = {https://courses.engr.illinois.edu/cs374al1/sp2023/}}
+
+@inproceedings{dhkrw-at-20,
+	abstract = {Computer science class enrollments have rapidly risen in the past decade. With current class sizes, standard approaches to grading and providing personalized feedback are no longer possible and new techniques become both feasible and necessary. In this paper, we present the third version of Automata Tutor, a tool for helping teachers and students in large courses on automata and formal languages. The second version of Automata Tutor supported automatic grading and feedback for finite-automata constructions and has already been used by thousands of users in dozens of countries. This new version of Automata Tutor supports automated grading and feedback generation for a greatly extended variety of new problems, including problems that ask students to create regular expressions, context-free grammars, pushdown automata and Turing machines corresponding to a given description, and problems about converting between equivalent models - e.g., from regular expressions to nondeterministic finite automata. Moreover, for several problems, this new version also enables teachers and students to automatically generate new problem instances. We also present the results of a survey run on a class of 950 students, which shows very positive results about the usability and usefulness of the tool.},
+	author = {D'Antoni, Loris and Helfrich, Martin and Kretinsky, Jan and Ramneantu, Emanuel and Weininger, Maximilian},
+	booktitle = {Proc. 32nd International Conference on Computer Aided Verification (CAV)},
+	date-added = {2023-04-30 10:47:57 -0500},
+	date-modified = {2023-04-30 10:47:57 -0500},
+	doi = {10.1007/978-3-030-53291-8_1},
+	number = {12225},
+	pages = {3--14},
+	publisher = {Springer},
+	series = {Lecture Notes in Computer Science},
+	title = {Automata Tutor v3},
+	year = {2020},
+	bdsk-url-1 = {https://doi.org/10.1007/978-3-030-53291-8_1}}
+
+@inproceedings{whz-pmops-15,
+	author = {West, Matthew and Herman, Geoffrey L. and Zilles, Craig},
+	booktitle = {Proc. 2015 ASEE Annual Conference \& Exposition},
+	date-added = {2023-04-30 10:37:12 -0500},
+	date-modified = {2023-04-30 10:38:47 -0500},
+	doi = {10.18260/p.24575},
+	pages = {26.1238.1--26.1238.14},
+	title = {{PrairieLearn}: {Mastery}-based Online Problem Solving with Adaptive Scoring and Recommendations Driven by Machine Learning},
+	year = {2015},
+	bdsk-url-1 = {https://doi.org/10.18260/p.24575}}
 
 @misc{p-pc-23,
 	author = {Poulsen, Seth},
@@ -516,12 +572,12 @@ This chapter discusses, improving the academic performance of college students w
 @inproceedings{xz-ucgsa-23,
 	author = {Xia, Jason and Zilles, Craig},
 	booktitle = {Proc. 54th ACM Technical Symposium on Computer Science Education (SIGCSE)},
+	comments = {https://hdl.handle.net/2142/114361},
 	date-added = {2023-02-11 18:17:42 -0600},
-	date-modified = {2023-04-25 18:53:14 -0500},
+	date-modified = {2023-05-01 13:52:20 -0500},
 	doi = {10.1145/3545945.3569728},
 	pages = {479--485},
 	title = {Using Context-Free Grammars to Scaffold and Automate Feedback in Precise Mathematical Writing},
-	url = {https://hdl.handle.net/2142/114361},
 	year = {2023},
 	bdsk-url-1 = {https://hdl.handle.net/2142/114361},
 	bdsk-url-2 = {https://doi.org/10.1145/3545945.3569728}}
@@ -530,11 +586,11 @@ This chapter discusses, improving the academic performance of college students w
 	author = {Luu, Michael and Ferland, Matthew and Rao, Varun Nagaraj and Arora, Arushi and Huynh, Randy and Reiber, Frederick and Wong-Ma, Jennifer and Shindler, Michael},
 	booktitle = {Proc. 54th ACM Technical Symposium on Computer Science Education (SIGCSE)},
 	date-added = {2023-02-11 18:11:27 -0600},
-	date-modified = {2023-02-26 12:51:21 -0600},
+	date-modified = {2023-05-01 13:59:42 -0500},
 	doi = {10.1145/3545945.3569820},
+	pages = {284--290},
 	title = {What is an Algorithms Course? {Survey} Results of Introductory Undergraduate Algorithms Courses in the {U.S.}},
-	url = {https://www.ics.uci.edu/~mikes/papers/What\_is\_Algorithms\_Course.pdf},
-	year = {2023, to appear},
+	year = {2023},
 	bdsk-url-1 = {https://www.ics.uci.edu/~mikes/papers/What%5C_is%5C_Algorithms%5C_Course.pdf},
 	bdsk-url-2 = {https://doi.org/10.1145/3545945.3569820}}
 
@@ -576,21 +632,6 @@ This chapter discusses, improving the academic performance of college students w
 	volume = {1},
 	year = {2022},
 	bdsk-url-1 = {https://doi.org/10.1145/3478431.3499416}}
-
-@inproceedings{dhkrw-at-20,
-	abstract = {Computer science class enrollments have rapidly risen in the past decade. With current class sizes, standard approaches to grading and providing personalized feedback are no longer possible and new techniques become both feasible and necessary. In this paper, we present the third version of Automata Tutor, a tool for helping teachers and students in large courses on automata and formal languages. The second version of Automata Tutor supported automatic grading and feedback for finite-automata constructions and has already been used by thousands of users in dozens of countries. This new version of Automata Tutor supports automated grading and feedback generation for a greatly extended variety of new problems, including problems that ask students to create regular expressions, context-free grammars, pushdown automata and Turing machines corresponding to a given description, and problems about converting between equivalent models - e.g., from regular expressions to nondeterministic finite automata. Moreover, for several problems, this new version also enables teachers and students to automatically generate new problem instances. We also present the results of a survey run on a class of 950 students, which shows very positive results about the usability and usefulness of the tool.},
-	author = {D'Antoni, Loris and Helfrich, Martin and Kretinsky, Jan and Ramneantu, Emanuel and Weininger, Maximilian},
-	booktitle = {Proc. 32nd International Conference on Computer Aided Verification (CAV)},
-	date-added = {2023-02-11 17:38:02 -0600},
-	date-modified = {2023-04-26 15:30:28 -0500},
-	doi = {10.1007/978-3-030-53291-8_1},
-	number = {12225},
-	pages = {3--14},
-	publisher = {Springer},
-	series = {Lecture Notes in Computer Science},
-	title = {Automata {Tutor} v3},
-	year = {2020},
-	bdsk-url-1 = {https://doi.org/10.1007/978-3-030-53291-8_1}}
 
 @book{sf-jiflap-06,
 	author = {Rodger, Susan H. and Finley, Thomas W.},
@@ -701,16 +742,16 @@ This chapter discusses, improving the academic performance of college students w
 	year = {2020},
 	bdsk-url-1 = {https://doi.org/10.1145/3373165.3373187}}
 
-@misc{pkhw-epcgp-22,
+@inproceedings{pkhw-epcgp-23,
 	arxiv = {2204.04196},
 	author = {Poulsen, Seth and Kulkarni, Shubhang and Herman, Geoffrey and West, Matthew},
+	booktitle = {Proc. 24th International Conference on Artificial Intelligence in Education (AIED)},
 	date-added = {2023-02-11 16:03:49 -0600},
-	date-modified = {2023-02-11 19:04:41 -0600},
-	howpublished = {Preprint},
-	month = {April},
+	date-modified = {2023-05-01 13:59:25 -0500},
+	publisher = {Springer},
+	series = {Lecture Notes in Computer Science},
 	title = {Efficient Partial Credit Grading of Proof Blocks Problems},
-	url = {https://arxiv.org/abs/2204.04196},
-	year = {2022},
+	year = {2023, to appear},
 	bdsk-url-1 = {https://arxiv.org/abs/2204.04196}}
 
 @inproceedings{pkhw-bpcga-22,
