--- a/topology.bib
+++ b/topology.bib
@@ -1,13 +1,407 @@
 %% This BibTeX bibliography file was created using BibDesk.
-%% http://bibdesk.sourceforge.net/
+%% https://bibdesk.sourceforge.io/
 
-
-%% Created for Jeff Erickson at 2023-04-27 11:51:08 -0500 
+%% Created for Jeff Erickson at 2024-11-22 08:51:09 -0600 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{d-rdt-90,
+	author = {Dillencourt, Michael B.},
+	date-added = {2024-11-22 08:46:57 -0600},
+	date-modified = {2024-11-22 08:48:28 -0600},
+	doi = {10.1016/0020-0190(90)90210-O},
+	journal = {Inf. Proc. Letters},
+	number = {7},
+	pages = {283--287},
+	title = {Realizability of {Delaunay} triangulations},
+	volume = {33},
+	year = {1990}}
+
+@article{ds-gtcid-96,
+	abstract = {We present new graph-theoretical conditions for polyhedra of inscribable type and Delaunay triangulations. We establish several sufficient conditions of the following general form: if a polyhedron has a sufficiently rich collection of Hamiltonian subgraphs, then it is of inscribable type. These results have several consequences: &#x02022;* All 4-connected polyhedra are of inscribable type.&#x02022;* All simplicial polyhedra in which all vertex degrees are between 4 and 6, inclusive, are of inscribable type.&#x02022;* All triangulations without chords or nonfacial triangles are realizable as combinatorially equivalent Delaunay triangulations. We also strengthen some earlier results about matchings in polyhedra of inscribable type. Specifically, we show that any nonbipartite polyhedron of inscribable type has a perfect matching containing any specified edge, and that any bipartite polyhedron of inscribable type has a perfect matching containing any two specified disjoint edges. We give examples showing that these results are best possible.},
+	author = {Dillencourt, Michael B. and Smith, Warren D.},
+	date-added = {2024-11-21 23:04:51 -0600},
+	date-modified = {2024-11-21 23:04:51 -0600},
+	doi = {10.1016/0012-365X(95)00276-3},
+	journal = {Discrete Math.},
+	number = {1},
+	pages = {63--77},
+	title = {Graph-theoretical conditions for inscribability and {Delaunay} realizability},
+	volume = {161},
+	year = {1996},
+	bdsk-url-1 = {https://doi.org/10.1016/0012-365X(95)00276-3}}
+
+@article{ggs-fsp3m-03,
+	author = {Gotsman, Craig and Gu, Xianfeng and Sheffer, Alla},
+	date-added = {2024-11-21 19:02:58 -0600},
+	date-modified = {2024-11-21 19:03:27 -0600},
+	doi = {10.1145/882262.882276},
+	journal = {{ACM} Trans. Graph.},
+	number = {3},
+	pages = {358--363},
+	title = {Fundamentals of spherical parameterization for {3D} meshes},
+	volume = {22},
+	year = {2003},
+	bdsk-url-1 = {https://doi.org/10.1145/882262.882276}}
+
+@inproceedings{sygs-psemt-05,
+	author = {Saba, Shadi and Yavneh, Irad and Gotsman, Craig and Sheffer, Alla},
+	booktitle = {Proc. 7th Int. Conf. Shape Modeling Appl. (SMI 2005)},
+	date-added = {2024-11-21 18:47:06 -0600},
+	date-modified = {2024-11-21 18:55:06 -0600},
+	doi = {10.1109/SMI.2005.32},
+	pages = {258--267},
+	title = {Practical Spherical Embedding of Manifold Triangle Meshes},
+	year = {2005},
+	bdsk-url-1 = {https://doi.org/10.1109/SMI.2005.32}}
+
+@article{a-mpsws-00,
+	author = {Alexa, Marc},
+	date-added = {2024-11-21 17:23:40 -0600},
+	date-modified = {2024-11-21 17:27:24 -0600},
+	doi = {https://doi.org/10.1007/PL00007211},
+	journal = {Vis. Comput.},
+	number = {1},
+	pages = {26--37},
+	title = {Merging polyhedral shapes with scattered features},
+	volume = {16},
+	year = {2000},
+	bdsk-url-1 = {https://doi.org/10.1007/PL00007211}}
+
+@article{ps-crrbs-94,
+	abstract = {We simplify the red/blue segment intersection algorithm of Chazelle et al. (Technical Report UIUC DCS-R-90-1578, Department of Computer Science, University of Illinois at Urbana, 1990). Given sets of n disjoint red and n disjoint blue segments, we count red/blue intersections in O(n log n) time using O(n) space or report them in additional time proportional to their number. Our algorithm uses a plane sweep to presort the segments; then it operates on a list of slabs that efficiently stores a single level of a segment tree. With no dynamic memory allocation, low pointer overhead, and mostly sequential memory reference, our algorithm performs well even with inadequate physical memory.},
+	author = {Palazzi, Larry and Snoeyink, Jack},
+	date-added = {2024-11-18 07:17:49 -0600},
+	date-modified = {2024-11-18 07:21:18 -0600},
+	doi = {10.1006/cgip.1994.1027},
+	journal = {CVGIP: Graph. Models Image Proc.},
+	number = {4},
+	pages = {304--310},
+	title = {Counting and Reporting Red/Blue Segment Intersections},
+	volume = {56},
+	year = {1994},
+	bdsk-url-1 = {https://doi.org/10.1006/cgip.1994.1027}}
+
+@article{n-atcop-01,
+	author = {Noy, Marc},
+	date-added = {2024-11-02 22:26:12 -0500},
+	date-modified = {2024-11-02 22:27:08 -0500},
+	doi = {10.1080/00029890.2001.11919725},
+	journal = {Amer. Math. Monthly},
+	number = {1},
+	pages = {66--68},
+	title = {Acyclic and Totally Cyclic Orientations in Planar Graphs},
+	volume = {108},
+	year = {2001},
+	bdsk-url-1 = {https://doi.org/10.1080/00029890.2001.11919725}}
+
+@article{s-pdp2-51,
+	author = {Supnick, Fred},
+	date-added = {2024-11-01 23:11:03 -0500},
+	date-modified = {2024-11-01 23:13:06 -0500},
+	doi = {10.2307/1969572},
+	journal = {Math. Ann.},
+	keywords = {Sch{\"o}nhardt polyhedron},
+	number = {2},
+	pages = {551--555},
+	title = {On the Perspective Deformation of Polyhedra. {II}. {Solution} of the Convexity Problem},
+	volume = {53},
+	year = {1951},
+	bdsk-url-1 = {https://doi.org/10.2307/1969572}}
+
+@article{s-pdp-48,
+	author = {Supnick, Fred},
+	date-added = {2024-11-01 23:09:36 -0500},
+	date-modified = {2024-11-01 23:10:59 -0500},
+	doi = {10.2307/1969055},
+	journal = {Ann. Math.},
+	number = {3},
+	pages = {714--730},
+	title = {On the perspective deformation of polyhedra},
+	volume = {49},
+	year = {1948},
+	bdsk-url-1 = {https://doi.org/10.2307/1969055}}
+
+@article{s-scrpp-71,
+	author = {Shephard, Geoffrey C.},
+	date-added = {2024-11-01 23:00:31 -0500},
+	date-modified = {2024-11-01 23:03:06 -0500},
+	doi = {10.1007/BF02771591},
+	journal = {Israel J. Math.},
+	number = {2},
+	pages = {257--262},
+	title = {Spherical complexes and radial projections of polytopes},
+	volume = {9},
+	year = {1971},
+	bdsk-url-1 = {https://doi.org/10.1007/BF02771591}}
+
+@article{ch-c3sis-80,
+	author = {Connelly, Robert and Henderson, David W.},
+	date-added = {2024-11-01 22:50:19 -0500},
+	date-modified = {2024-11-01 23:03:38 -0500},
+	doi = {10.1017/S0305004100057595},
+	journal = {Math. Proc. Cambridge Phil. Soc.},
+	number = {2},
+	pages = {299--306},
+	title = {A convex 3-complex not simplicially isomorphic to a strictly convex complex},
+	volume = {88},
+	year = {1980},
+	bdsk-url-1 = {https://doi.org/10.1017/S0305004100057595}}
+
+@inproceedings{ds-tptc-07,
+	abstract = {In this paper we study the problem of transitive closure in dynamic directed plane graphs. We show a dynamic algorithm supporting updates and queries in worst-case {\$}{\backslash}tilde{\{}O{\}}({\backslash}sqrt{\{}n{\}}){\$}time. This is the first known algorithm for this problem with almost linear update time and query time product.},
+	author = {Diks, Krzysztof and Sankowski, Piotr},
+	booktitle = {Proc. 15th Ann. Europ. Symp. Algorithms},
+	date-added = {2024-11-01 22:35:07 -0500},
+	date-modified = {2024-11-01 22:39:06 -0500},
+	doi = {10.1007/978-3-540-75520-3_53},
+	number = {4698},
+	pages = {594--604},
+	publisher = {Springer},
+	series = {Lecture Notes Comput. Sci.},
+	title = {Dynamic Plane Transitive Closure},
+	year = {2007},
+	bdsk-url-1 = {https://doi.org/10.1007/978-3-540-75520-3_53}}
+
+@article{s-uzdt-28,
+	author = {Sch{\"o}nhardt, Erich},
+	date-added = {2024-10-30 10:32:31 -0500},
+	date-modified = {2024-10-30 10:33:29 -0500},
+	doi = {10.1007/BF01451597},
+	journal = {Math. Ann.},
+	number = {1},
+	pages = {309--312},
+	title = {{\"U}ber die {Zerlegung} von {Dreieckspolyedern} in {Tetraeder}},
+	volume = {98},
+	year = {1928},
+	bdsk-url-1 = {https://doi.org/10.1007/BF01451597}}
+
+@article{n-p2e-26,
+	author = {Newman, Maxwell H. A.},
+	date-added = {2024-10-29 11:46:21 -0500},
+	date-modified = {2024-10-29 12:04:24 -0500},
+	journal = {Proc. Royal Acad. Amsterdam},
+	keywords = {shelling, unshellable 3-ball},
+	number = {10},
+	pages = {1401--1405},
+	title = {A property of 2-dimensional elements},
+	volume = {29},
+	year = {1926}}
+
+@article{f-gkt-24,
+	author = {Furch, Robert},
+	date-added = {2024-10-29 11:35:32 -0500},
+	date-modified = {2024-10-29 11:44:48 -0500},
+	doi = {10.1007/BF02954617},
+	journal = {Abh. Math. Sem. Hamburg},
+	keywords = {unshellable 3-ball, knotted hole},
+	pages = {69--88},
+	title = {Zur {Grundlegung} der kobinatorischen {Topoogie}},
+	volume = {3},
+	year = {1924},
+	bdsk-url-1 = {https://doi.org/10.1007/BF02954617}}
+
+@inproceedings{s-opg-87,
+	author = {Stolfi, Jorge},
+	booktitle = {Proc. 3rd Ann. Symp. Comput. Geom.},
+	date-added = {2024-10-23 10:40:30 -0500},
+	date-modified = {2024-10-23 11:55:57 -0500},
+	doi = {10.1145/41958.41966},
+	pages = {76--85},
+	title = {Oriented projective geometry},
+	year = {1987},
+	bdsk-url-1 = {https://doi.org/10.1145/41958.41966}}
+
+@phdthesis{s-pcg-88,
+	author = {Stolfi, Jorge},
+	comments = {https://www.proquest.com/pqdtglobal/docview/303696402},
+	date-added = {2024-10-23 10:40:30 -0500},
+	date-modified = {2024-10-30 13:04:05 -0500},
+	month = {May},
+	note = {Reprinted as Technical Report SRC-RR-36, DEC / HP Labs Systems Research Center, January 1989},
+	school = {Dept. Comput. Sci., Stanford},
+	title = {Primitives for Computational Geometry},
+	type = {Ph.{D}. Thesis},
+	url = {https://shiftleft.com/mirrors/www.hpl.hp.com/techreports/Compaq-DEC/SRC-RR-36.pdf},
+	year = {1988},
+	bdsk-url-1 = {https://www.proquest.com/pqdtglobal/docview/303696402}}
+
+@book{s-opgfg-91,
+	address = {New York, NY},
+	author = {Stolfi, Jorge},
+	date-added = {2024-10-23 10:40:30 -0500},
+	date-modified = {2024-10-23 10:42:42 -0500},
+	doi = {10.1016/C2013-0-11551-6},
+	keywords = {oriented projective geometry, duality, convexity, Pl{\"u}cker coordinates},
+	publisher = {Academic Press},
+	succeeds = {s-pcg-88},
+	title = {Oriented Projective Geometry: A Framework for Geometric Computations},
+	update = {95.05 korneenko},
+	year = {1991},
+	bdsk-url-1 = {https://doi.org/10.1016/C2013-0-11551-6}}
+
+@misc{lwz-sgtc-24,
+	arxiv = {2204.10833},
+	author = {Luo, Yanwen and Wu, Tianqi and Zhu, Xiaoping},
+	date-added = {2024-10-17 16:47:16 -0500},
+	date-modified = {2024-10-17 16:48:02 -0500},
+	doi = {10.48550/arXiv.2204.10833},
+	howpublished = {Preprint},
+	month = {August},
+	title = {Spaces of Geodesic Triangulations Are Cells},
+	year = {2024},
+	bdsk-url-1 = {https://doi.org/10.48550/arXiv.2107.05159}}
+
+@inproceedings{bls-mpgdo-24,
+	arxiv = {2409.04074},
+	author = {Biedl, Therese and Lubiw, Anna and Spalding-Jamieson, Jack},
+	booktitle = {Proc. 32nd Int. Symp. Graph Drawing Network Vis.},
+	date-added = {2024-10-17 16:28:03 -0500},
+	date-modified = {2024-10-17 16:34:07 -0500},
+	doi = {10.48550/arXiv.2409.04074},
+	pages = {to appear},
+	title = {Morphing Planar Graph Drawings via Orthogonal Box Drawings},
+	year = {2024},
+	bdsk-url-1 = {https://doi.org/10.48550/arXiv.2409.04074}}
+
+@incollection{e-cocb-12,
+	author = {Erickson, Jeff},
+	booktitle = {Advances in Applied and Computational Topology},
+	comments = {Invited survey for an AMS Short Course on Computational Topology at the 2011 Joint Mathematics Meetings},
+	date-added = {2024-07-30 15:10:40 -0500},
+	date-modified = {2024-07-30 15:10:52 -0500},
+	editor = {Zomorodian, Afra},
+	number = {70},
+	pages = {195--228},
+	publisher = {American Mathematical Society},
+	series = {Proc. Symp. Appl. Math.},
+	title = {Combinatorial optimization of cycles and bases},
+	year = {2012}}
+
+@book{lrs-tsaa-10,
+	author = {Loera, Jes{\'u}s A. De and Rambau, J{\"o}rg and Santos, Francisco},
+	date-added = {2024-06-28 09:51:39 -0500},
+	date-modified = {2024-06-28 09:58:21 -0500},
+	doi = {10.1007/978-3-642-12971-1},
+	keywords = {regular / coherent triangulations, secondary polytopes},
+	number = {25},
+	publisher = {Springer},
+	series = {Algorithms and Computation in Mathematics},
+	title = {Triangulations: Structures for Algorithms and Applications},
+	year = {2010},
+	bdsk-url-1 = {https://doi.org/10.1007/978-3-642-12971-1}}
+
+@article{pw-sprpt-17,
+	author = {Pak, Igor and Wilson, Steadman},
+	comments = {"shedding" for vertex order instead of "shelling"},
+	date-added = {2024-06-28 09:45:50 -0500},
+	date-modified = {2024-06-28 09:50:46 -0500},
+	doi = {10.1016/j.jctb.2017.05.007},
+	journal = {J. Comb. Theory Ser. B},
+	keywords = {integer polytope embedding},
+	pages = {82--110},
+	title = {Skyscraper polytopes and realizations of plane triangulations},
+	volume = {127},
+	year = {2017},
+	bdsk-url-1 = {https://doi.org/10.1016/j.jctb.2017.05.007}}
+
+@article{rww-vmppg-97,
+	author = {Ripphausen-Lipa, Heike and Wagner, Dorothea and Weihe, Karsten},
+	date-added = {2024-06-05 16:00:19 -0500},
+	date-modified = {2024-06-05 16:00:29 -0500},
+	doi = {10.1137/S0097539793253565},
+	journal = {SIAM J. Comput.},
+	keywords = {linear time},
+	number = {2},
+	pages = {331--349},
+	title = {The Vertex-Disjoint {Menger} Problem in Planar Graphs},
+	volume = {26},
+	year = {1997},
+	bdsk-url-1 = {https://doi.org/10.1137/S0097539793253565}}
+
+@article{epln-sdahg-06,
+	author = {Eades, Peter and Peng, Qingwen and Lin, Xuemin and Nagamochi, Hiroshi},
+	date-added = {2024-05-01 10:24:12 -0500},
+	date-modified = {2024-05-01 10:26:28 -0500},
+	doi = {10.1007/s00453-004-1144-8},
+	journal = {Algorithmica},
+	number = {1},
+	pages = {1--32},
+	title = {Straight-line drawing algorithms for hierarchical graphs and clustered graphs},
+	volume = {44},
+	year = {2006},
+	bdsk-url-1 = {https://doi.org/10.1007/s00453-004-1144-8}}
+
+@article{ev-rpee-10,
+	abstract = { Suppose x and y are unit 2-norm n-vectors whose components sum to zero. Let \${\cal P}(x,y)\$ be the polygon obtained by connecting \$(x\_{1},y\_{1}),\ldots,(x\_{n},y\_{n}),(x\_{1},y\_{1})\$ in order. We say that \$\widehat{{\cal P}}(\widehat{x},\widehat{y})\$ is the normalized average of \${\cal P}(x,y)\$ if it is obtained by connecting the midpoints of its edges and then normalizing the resulting vertex vectors \$\widehat{x}\$ and \$\widehat{y}\$ so that they have unit 2-norm. If this process is repeated starting with \${\cal P}\_{0} = {\cal P}(x^{(0)},y^{(0)})\$, then in the limit the vertices of the polygon iterates \${\cal P}(x^{(k)},y^{(k)})\$ converge to an ellipse \${\cal E}\$ that is centered at the origin and whose semiaxes are tilted forty-five degrees from the coordinate axes. An eigenanalysis together with the singular value decomposition is used to explain this phenomenon. The problem and its solution is a metaphor for matrix-based research in computational science and engineering. },
+	author = {Elmachtoub, Adam N. and Van Loan, Charles F.},
+	date-added = {2023-06-10 21:22:30 -0500},
+	date-modified = {2023-06-10 21:23:10 -0500},
+	doi = {10.1137/090746707},
+	journal = {SIAM Review},
+	number = {1},
+	pages = {151-170},
+	title = {From Random Polygon to Ellipse: {An} Eigenanalysis},
+	volume = {52},
+	year = {2010},
+	bdsk-url-1 = {https://doi.org/10.1137/090746707}}
+
+@article{m-grdsf-08,
+	abstract = { We present the duality between edge lengths and axial forces in self-stressed frameworks, upon which are based reciprocal diagrams, introduced by Maxwell and Cremona in the nineteenth century. The main concepts and principles are simplified by using a graph theoretic approach. We describe some unusual orthogonality relations, involving lengths, axial forces and their rates of change.Reciprocal diagrams, which exist for frameworks with underlying planar graph, are extended also to the non-planar case by introducing a new criterion. When this criterion can be applied, different reciprocals can be obtained as symmetric frameworks. The same criterion can also be applied to planar cases giving new reciprocals as a result.Although reciprocal diagrams cannot be obtained for all self-stressed frameworks, the presented duality always holds and it provides useful insights for design and form-finding purposes. },
+	author = {Micheletti, Andrea},
+	comments = {non-planar Maxwell-Cremona},
+	date-added = {2023-05-25 10:36:09 -0500},
+	date-modified = {2023-05-25 10:36:39 -0500},
+	doi = {10.1260/026635108786260974},
+	journal = {Int. J. Space Structures},
+	number = {3},
+	pages = {153--166},
+	title = {On Generalized Reciprocal Diagrams for Self-Stressed Frameworks},
+	volume = {23},
+	year = {2008},
+	bdsk-url-1 = {https://doi.org/10.1260/026635108786260974}}
+
+@book{b-ecrfs-14,
+	author = {Bow, Robert H.},
+	date-added = {2023-05-25 10:20:05 -0500},
+	date-modified = {2023-05-25 10:22:25 -0500},
+	doi = {10.1017/CBO9781107297005},
+	note = {Originally published by E. \& F. N. Spon, London, 1873},
+	publisher = {Cambridge University Press},
+	title = {Economics of Construction in Relation to Framed Structures},
+	year = {2014},
+	bdsk-url-1 = {https://doi.org/10.1017/CBO9781107297005}}
+
+@incollection{p-pte-13,
+	author = {Patrignani, Maurizio},
+	booktitle = {Handbook of Graph Drawing and Visualization},
+	chapter = {1},
+	date-added = {2023-05-11 17:05:49 -0500},
+	date-modified = {2023-05-11 17:11:53 -0500},
+	edition = {1st},
+	editor = {Tamassia, Roberto},
+	pages = {1--42},
+	publisher = {CRC Press},
+	title = {Planarity testing and embedding},
+	url = {https://cs.brown.edu/people/rtamassi/gdhandbook/chapters/planarity.pdf},
+	year = {2013},
+	bdsk-url-1 = {https://cs.brown.edu/people/rtamassi/gdhandbook/chapters/planarity.pdf}}
+
+@inproceedings{pdzja-seius-21,
+	abstract = {{Systematic enumeration and identification of unique 3D spatial topologies of complex engineering systems such as automotive cooling layouts, hybrid-electric power trains, and aero-engines are essential to search their exhaustive design spaces to identify spatial topologies that can satisfy challenging system requirements. However, efficient navigation through discrete 3D spatial topology options is a very challenging problem due to its combinatorial nature and can quickly exceed human cognitive abilities at even moderate complexity levels. Here we present a new, efficient, and generic design framework that utilizes mathematical spatial graph theory to represent, enumerate, and identify distinctive 3D topological classes for an abstract engineering system, given its system architecture (SA) --- its components and interconnections. Spatial graph diagrams (SGDs) are generated for a given SA from zero to a specified maximum crossing number. Corresponding Yamada polynomials for all the planar SGDs are then generated. SGDs are categorized into topological classes, each of which shares a unique Yamada polynomial. Finally, for each topological class, one 3D geometric model is generated for an SGD with the fewest interconnect crossings. Several case studies are shown to illustrate the different features of our proposed framework. Design guidelines are also provided for practicing engineers to aid the utilization of this framework for application to different types of real-world problems.}},
+	author = {Peddada, Satya R. T. and Dunfield, Nathan M. and Zeidner, Lawrence E. and James, Kai A. and Allison, James T.},
+	booktitle = {Proc. 47th ASME Design Automation Conf. (DAC)},
+	date-added = {2023-05-11 16:54:17 -0500},
+	date-modified = {2023-05-11 17:03:20 -0500},
+	doi = {10.1115/DETC2021-66900},
+	pages = {paper V03AT03A042, 13 pages},
+	title = {Systematic Enumeration and Identification of Unique Spatial Topologies of {3D} Systems Using Spatial Graph Representations},
+	volume = {3A},
+	year = {2021},
+	bdsk-url-1 = {https://doi.org/10.1115/DETC2021-66900}}
 
 @article{chm-dsidts-15,
 	abstract = {How much cutting is needed to simplify the topology of a surface? We provide bounds for several instances of this question, for the minimum length of topologically non-trivial closed curves, pants decompositions, and cut graphs with a given combinatorial map in triangulated combinatorial surfaces (or their dual cross-metric counterpart). Our work builds upon Riemannian systolic inequalities, which bound the minimum length of non-trivial closed curves in terms of the genus and the area of the surface. We first describe a systematic way to translate Riemannian systolic inequalities to a discrete setting, and vice-versa. This implies a conjecture by Przytycka and Przytycki (Graph structure theory. Contemporary Mathematics, vol. 147, 1993), a number of new systolic inequalities in the discrete setting, and the fact that a theorem of Hutchinson on the edge-width of triangulated surfaces and Gromov's systolic inequality for surfaces are essentially equivalent. We also discuss how these proofs generalize to higher dimensions. Then we focus on topological decompositions of surfaces. Relying on ideas of Buser, we prove the existence of pants decompositions of length {\$}{\$}O(g\^{}{\{}3/2{\}}n\^{}{\{}1/2{\}}){\$}{\$}for any triangulated combinatorial surface of genus {\$}{\$}g{\$}{\$}with {\$}{\$}n{\$}{\$}triangles, and describe an {\$}{\$}O(gn){\$}{\$}-time algorithm to compute such a decomposition. Finally, we consider the problem of embedding a cut graph (or more generally a cellular graph) with a given combinatorial map on a given surface. Using random triangulations, we prove (essentially) that, for any choice of a combinatorial map, there are some surfaces on which any cellular embedding with that combinatorial map has length superlinear in the number of triangles of the triangulated combinatorial surface. There is also a similar result for graphs embedded on polyhedral triangulations.},
@@ -1902,11 +2296,12 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	arxiv = {2202.11076},
 	author = {Stade, Jack and Tucker-Foltz, Jamie},
 	date-added = {2023-02-09 12:04:30 -0600},
-	date-modified = {2023-02-09 12:04:30 -0600},
+	date-modified = {2024-10-17 16:46:54 -0500},
 	doi = {10.48550/ARXIV.2202.11076},
 	howpublished = {Preprint},
+	month = {Feb},
 	title = {Topological Universality of the Art Gallery Problem},
-	year = {Feb 2022},
+	year = {2022},
 	bdsk-url-1 = {https://doi.org/10.48550/ARXIV.2202.11076}}
 
 @misc{al-fdchm-22,
@@ -3196,9 +3591,9 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	bdsk-url-1 = {https://doi.org/10.2307/2046921}}
 
 @article{ah-sgts-87,
-	author = {Awartini, Marwan and Henderson, David W.},
+	author = {Awartani, Marwan and Henderson, David W.},
 	date-added = {2021-06-24 16:16:32 -0500},
-	date-modified = {2021-06-24 16:17:44 -0500},
+	date-modified = {2024-03-30 12:33:47 -0500},
 	doi = {10.2307/2000738},
 	journal = {Trans. Amer. Math. Soc.},
 	number = {2},
@@ -4582,10 +4977,11 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	bdsk-url-1 = {http://www.cs.umanitoba.ca/%5C%7Ecccg2018/papers/session7B-p1.pdf}}
 
 @inproceedings{aft-rweg-18,
+	arxiv = {1709.09209},
 	author = {Akitaya, Hugo A. and Fulek, Radoslav and T{\'o}th, Csaba D.},
 	booktitle = {Proc. 29th Ann. ACM-SIAM Symp. Discrete Algorithms},
 	date-added = {2020-08-28 12:42:54 -0500},
-	date-modified = {2020-08-28 12:43:17 -0500},
+	date-modified = {2024-10-26 18:09:26 -0500},
 	doi = {10.1137/1.9781611975031.20},
 	pages = {274--292},
 	title = {Recognizing Weak Embeddings of Graphs},
@@ -5184,10 +5580,11 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 
 @inproceedings{fk-htamg-18,
 	annote = {Keywords: Hanani-Tutte theorem, graph embedding, map approximation, weak embedding, clustered planarity},
+	arxiv = {1705.05243},
 	author = {Fulek, Radoslav and Kyncl, Jan},
 	booktitle = {Proc. 34th Int. Symp. Comput. Geom.},
 	date-added = {2020-08-26 15:58:48 -0500},
-	date-modified = {2020-08-29 17:08:03 -0500},
+	date-modified = {2024-10-26 18:34:15 -0500},
 	doi = {10.4230/LIPIcs.SoCG.2018.39},
 	number = {99},
 	pages = {39:1--39:15},
@@ -5195,8 +5592,7 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	series = {Leibniz Int. Proc. Informatics},
 	title = {{Hanani}-{Tutte} for Approximating Maps of Graphs},
 	year = {2018},
-	bdsk-url-1 = {http://drops.dagstuhl.de/opus/volltexte/2018/8752},
-	bdsk-url-2 = {https://doi.org/10.4230/LIPIcs.SoCG.2018.39}}
+	bdsk-url-1 = {https://doi.org/10.4230/LIPIcs.SoCG.2018.39}}
 
 @inproceedings{dww-grdmt-18,
 	annote = {Keywords: graph reconstruction, discrete Morse theory, persistence},
@@ -6516,20 +6912,6 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	year = {2010},
 	bdsk-url-1 = {https://doi.org/10.1098/rspa.2009.0676}}
 
-@article{l-rpcvn-01,
-	author = {Lov{\'a}sz, L{\'a}szl{\'o}},
-	date-added = {2019-12-01 11:58:40 -0600},
-	date-modified = {2019-12-01 12:01:52 -0600},
-	doi = {10.1006/jctb.2000.2027},
-	journal = {J. Comb. Theory Ser. B},
-	keywords = {Maxwell-Cremona (sort of)},
-	number = {2},
-	pages = {223--236},
-	title = {Representations of polyhedra and the {Colin de Verdi{\`e}re} number},
-	volume = {82},
-	year = {2001},
-	bdsk-url-1 = {https://doi.org/10.1006/jctb.2000.2027}}
-
 @incollection{i-skfen-19,
 	arxiv = {1707.02172},
 	author = {Izmestiev, Ivan},
@@ -6646,10 +7028,10 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 @article{a-rpccc-87,
 	author = {Aurenhammer, Franz},
 	date-added = {2019-12-01 09:01:16 -0600},
-	date-modified = {2019-12-03 15:32:25 -0600},
+	date-modified = {2024-11-01 23:25:06 -0500},
 	doi = {10.1016/S0747-7171(87)80003-2},
 	journal = {J. Symb. Comput.},
-	keywords = {Maxwell-Cremona},
+	keywords = {Maxwell-Cremona, coherent = orthogonal dual},
 	number = {3},
 	pages = {249--255},
 	title = {Recognising polytopical cell complexes and constructing projection polyhedra},
@@ -8230,10 +8612,12 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	bdsk-url-1 = {https://doi.org/10.5169/seals-58738}}
 
 @incollection{rss-ps-08,
+	arxiv = {math/0612672},
 	author = {Rote, G{\"u}nter and Santos, Fransisco and Streinu, Ileana},
-	booktitle = {Essays on Discrete and Computational Geometry: Twenty Years Later},
+	booktitle = {Surveys on Discrete and Computational Geometry: Twenty Years Later},
 	date-added = {2019-03-14 15:48:23 +0100},
-	date-modified = {2019-03-14 15:52:59 +0100},
+	date-modified = {2024-10-17 16:40:36 -0500},
+	doi = {10.1090/conm/453/08807},
 	editor = {Goodman, Jacob E. and Pach, J{\'a}nos and Pollack, Richard},
 	number = {453},
 	pages = {343--410},
@@ -8241,7 +8625,8 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	read = {1},
 	series = {Contemporary Mathematics},
 	title = {Pseudo-triangulations---a survey},
-	year = {2008}}
+	year = {2008},
+	bdsk-url-1 = {https://doi.org/10.1090/conm/453/08807}}
 
 @book{c-frnsg-72,
 	author = {Cremona, Luigi},
@@ -8950,10 +9335,10 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 @article{hk-prga-92,
 	author = {Hopcroft, John E. and Kahn, Peter J.},
 	date-added = {2017-09-13 14:32:16 +0000},
-	date-modified = {2017-09-13 14:36:35 +0000},
+	date-modified = {2024-10-17 15:49:33 -0500},
 	doi = {10.1007/BF01758769},
 	journal = {Algorithmica},
-	keywords = {Maxwell-Cremona theorem},
+	keywords = {Maxwell-Cremona correspondence},
 	number = {1--6},
 	pages = {339--380},
 	read = {1},
@@ -15874,14 +16259,16 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 @article{bm-sdcs-71,
 	author = {Bruggesser, Heinz and Mani, Peter},
 	date-added = {2012-03-20 14:02:49 +0000},
-	date-modified = {2012-03-20 14:36:30 +0000},
+	date-modified = {2024-10-17 17:17:30 -0500},
+	doi = {10.7146/math.scand.a-11045},
 	journal = {Math. Scand.},
-	keywords = {rockets, balloons},
+	keywords = {rockets, balloons, line shelling},
 	pages = {197--205},
 	read = {1},
 	title = {Shellable decompositions of cells and spheres},
 	volume = {29},
-	year = {1971}}
+	year = {1971},
+	bdsk-url-1 = {https://doi.org/10.7146/math.scand.a-11045}}
 
 @article{h-uedak-64,
 	author = {Heller, Siegfried},
@@ -19198,7 +19585,8 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 @article{fpp-hdpgg-90,
 	author = {de Fraysseix, Hubert and Pach, J{\'a}nos and Pollack, Richard},
 	date-added = {2011-12-01 03:51:52 +0000},
-	date-modified = {2019-08-08 11:04:14 -0500},
+	date-modified = {2024-11-01 12:58:34 -0500},
+	doi = {10.1007/BF02122694},
 	journal = {Combinatorica},
 	keywords = {F{\'a}ry-Wagner embedding},
 	number = {1},
@@ -19206,7 +19594,8 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 	read = {1},
 	title = {How to Draw a Planar Graph on a Grid},
 	volume = {10},
-	year = {1990}}
+	year = {1990},
+	bdsk-url-1 = {https://doi.org/10.1007/BF02122694}}
 
 @misc{b-gbjkn-1843,
 	author = {Bolzano, Bernard},
@@ -19689,14 +20078,15 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 
 @article{s-pr-1916,
 	author = {Steinitz, Ernst},
-	comments = {First proof of Steintz's theorem; http://gdz.sub.uni-goettingen.de/dms/load/img/?PPN=PPN360609767&DMDID=dmdlog203},
+	comments = {First proof of Steintz's theorem},
 	date-added = {2011-11-07 12:45:05 +0000},
-	date-modified = {2015-12-02 15:21:30 +0000},
+	date-modified = {2024-10-17 16:43:57 -0500},
 	journal = {Enzyklop{\"a}die der mathematischen Wissenschaften mit Einschluss ihrer Anwendungen},
 	number = {12},
 	pages = {1--139},
 	read = {1},
 	title = {Polyeder und {Raumeinteilungen}},
+	url = {https://gdz.sub.uni-goettingen.de/id/PPN360609767},
 	volume = {III.AB},
 	year = {1916},
 	bdsk-url-1 = {http://gdz.sub.uni-goettingen.de/dms/load/img/?PPN=PPN360609767&DMDID=dmdlog203}}
@@ -19758,8 +20148,8 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 	address = {Paris},
 	author = {Legendre, Adrien-Marie},
 	date-added = {2011-11-04 11:51:40 +0000},
-	date-modified = {2011-11-04 12:00:36 +0000},
-	publisher = {F. Didot},
+	date-modified = {2024-06-24 16:23:34 -0500},
+	publisher = {Firmin Didot},
 	title = {{\'E}l{\'e}ments de g{\'e}om{\'e}trie},
 	year = {1794}}
 
