--- a/optimization.bib
+++ b/optimization.bib
@@ -1,13 +1,98 @@
 %% This BibTeX bibliography file was created using BibDesk.
-%% http://bibdesk.sourceforge.net/
+%% https://bibdesk.sourceforge.io/
 
-
-%% Created for Jeff Erickson at 2023-03-28 16:59:43 -0500 
+%% Created for Jeff Erickson at 2024-11-10 21:03:54 -0600 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{gt-anda-87,
+	author = {Gilbert, John R. and Tarjan, Robert E.},
+	date-added = {2024-11-10 20:29:23 -0600},
+	date-modified = {2024-11-10 21:03:54 -0600},
+	doi = {10.1007/BF01396660},
+	journal = {Numerische Mathematik},
+	number = {4},
+	pages = {377--404},
+	title = {The analysis of a nested dissection algorithm},
+	volume = {50},
+	year = {1987}}
+
+@article{mv-ndsnb-93,
+	author = {julio M. Stern and Vavasis, Stephen A.},
+	date-added = {2024-09-22 17:19:10 -0500},
+	date-modified = {2024-09-22 17:22:15 -0500},
+	doi = {10.1137/0614054},
+	journal = {SIAM J. Matrix Analysis Appl.},
+	number = {1},
+	pages = {766--775},
+	title = {Nested dissection for sparse nullspace bases},
+	volume = {14},
+	year = {1993},
+	bdsk-url-1 = {https://doi.org/10.1137/0614054}}
+
+@article{ay-msnda-13,
+	author = {Alon, Noga and Yuster, Raphael},
+	date-added = {2024-09-22 16:28:28 -0500},
+	date-modified = {2024-09-22 16:36:34 -0500},
+	doi = {https://doi.org/10.1145/2508028.2505989},
+	journal = {J. ACM},
+	number = {4},
+	pages = {article 25, 18pp.},
+	title = {Matrix sparsification and nested dissection over arbitrary fields},
+	volume = {60},
+	year = {2013},
+	bdsk-url-1 = {https://doi.org/10.1145/2508028.2505989}}
+
+@inproceedings{y-msrdc-08,
+	author = {Yuster, Raphael},
+	booktitle = {Proc. 49th IEEE Symp. Found. Comput. Sci.},
+	date-added = {2024-09-22 16:24:24 -0500},
+	date-modified = {2024-09-22 16:36:49 -0500},
+	doi = {10.1109/FOCS.2008.14},
+	pages = {137--145},
+	title = {Matrix sparsification for rank and determinant computations via nested dissection},
+	year = {2008},
+	bdsk-url-1 = {https://doi.org/10.1109/FOCS.2008.14}}
+
+@article{p-esr-79,
+	author = {Papadimitriou, Christos H.},
+	date-added = {2024-08-03 17:53:29 -0500},
+	date-modified = {2024-08-03 17:53:49 -0500},
+	doi = {10.1016/0020-0190(79)90079-6},
+	journal = {Information Processing Letters},
+	keywords = {Binary search, Farey series, linear programming},
+	number = {1},
+	pages = {1--4},
+	title = {Efficient search for rationals},
+	volume = {8},
+	year = {1979},
+	bdsk-url-1 = {https://doi.org/10.1016/0020-0190(79)90079-6}}
+
+@inproceedings{ca-prrid-76,
+	author = {Collins, George E. and Akritas, Alkiviadis G.},
+	booktitle = {Proc. 3rd {ACM} Symp. Symbolic and Algebraic Manipulation},
+	comments = {Yes, the title is misspelled.},
+	date-added = {2024-08-03 17:33:31 -0500},
+	date-modified = {2024-08-03 17:35:15 -0500},
+	doi = {10.1145/800205.806346},
+	pages = {272--275},
+	title = {Polynomial real root isolation using {Descarte's} (sic) rule of signs},
+	year = {1976},
+	bdsk-url-1 = {https://doi.org/10.1145/800205.806346}}
+
+@book{gv-mc-13,
+	author = {Golub, Gene H. and Van Loan, Charles F.},
+	date-added = {2024-07-16 15:42:19 -0500},
+	date-modified = {2024-07-16 15:46:09 -0500},
+	doi = {10.1137/1.9781421407944},
+	edition = {Fourth},
+	publisher = {Johns Hopkins University Press},
+	title = {Matrix Computations},
+	year = {2013},
+	bdsk-url-1 = {https://doi.org/10.1137/1.9781421407944}}
 
 @article{jo-rnfns-09,
 	abstract = {This paper was edited by Sigismund Cohn, C. W. Borchardt and A. Clebsch from posthumous manuscripts of C. G. J. Jacobi. The solution of the following problem: ``to transform a square table of m2 numbers by adding minimal numbers ℓito each horizontal row, in such a way that it possess m transversal maxima'', determines the order and the shortest normal form reduction of the system: the equations ui= 0 must be respectively differentiated ℓitimes. One also determines the number of differentiations of each equation of the given system needed to produce the differential equations necessary to reduce the proposed system to a single equation.},
